2009-05-07  Nicolas François  <nicolas.francois@centraliens.net>

	* man/login.defs.5.xml: PAM enabled chpasswd do not use any
	configuration variable from login.defs.

2009-05-07  Nicolas François  <nicolas.francois@centraliens.net>

	* man/passwd.1.xml: Differentiate the files used for PAM and
	non-PAM versions.

2009-05-07  Nicolas François  <nicolas.francois@centraliens.net>

	* man/chpasswd.8.xml: Describe how chpasswd in case of error.
	* man/chpasswd.8.xml: Describe the PAM enabled chpasswd behavior.
	* man/chpasswd.8.xml: Differentiate the files and configurations
	used for PAM and non-PAM versions.

2009-05-07  Nicolas François  <nicolas.francois@centraliens.net>

	* src/login.c: failcount does not need to be signed.

2009-05-07  Nicolas François  <nicolas.francois@centraliens.net>

	* src/Makefile.am: PAM enabled chpasswd now needs to be linked to
	the PAM library, even if --enable-account-tools-setuid is not
	used.

2009-05-07  Nicolas François  <nicolas.francois@centraliens.net>

	* src/chpasswd.c: Added the line number when an error is reported
	instead of only the username.
	* src/chpasswd.c: PAM enabled chpasswd do may change the password
	database (for the user where the password update succeeded) even
	if there were a failure for one user. Do not indicate that changes
	were ignored.

2009-05-07  Nicolas François  <nicolas.francois@centraliens.net>

	* src/passwd.c: Exit immediately when unlocking a password would
	result in a passwordless account. This avoid printing a success
	message after the warning.

2009-05-07  Nicolas François  <nicolas.francois@centraliens.net>

	* src/nologin.c: Include <stdlib.h> to get EXIT_FAILURE.

2009-05-04  Nicolas François  <nicolas.francois@centraliens.net>

	* NEWS, configure.in: Fix build failure on non-PAM enabled system
	when --without-pam is not specified.

2009-04-30  Nicolas François  <nicolas.francois@centraliens.net>

	* lib/commonio.c: Ignore teh return values of fclose() and